fix scrollorama, heading animation, spacing

--- a/less/component-site-overrides.less
+++ b/less/component-site-overrides.less
@@ -50,14 +50,12 @@
     padding-bottom: 60px;
   }
 
-  .section-screenshots .section-header,
-  .section-screenshots .section-header + .lead {
+  .section-screenshots .photo-headings {
     display: none;
   }
 
-  .section-screenshots .section-header.active,
-  .section-screenshots .section-header.active + .lead {
-    display: block;
+  .section-screenshots .photo-heading .lead {
+    margin-top: -12px;
   }
 
   .section-screenshots .photo-viewer {
